Title the babushka sources post.

--- a/site/2012/10/20/private-babushka-sources-bug-found-facepalmed-fixed.html.haml
+++ b/site/2012/10/20/private-babushka-sources-bug-found-facepalmed-fixed.html.haml
@@ -1,6 +1,6 @@
 ---
 layout: "/_post.haml"
-title: "babushka private sources"
+title: "private babushka sources bug: found, facepalmed, fixed"
 css_class: "with-margin"
 ---
 
