Rename the 2.0 headline features post.

--- a/site/2013/02/24/ruby-2-0-as-seen-at-rubyconf-au.html.haml
+++ b/site/2013/02/24/ruby-2-0-as-seen-at-rubyconf-au.html.haml
@@ -1,6 +1,6 @@
 ---
 layout: "/_post.haml"
-title: "Ruby 2.0, direct from RubyConf AU"
+title: "Ruby 2.0, as seen at RubyConf AU"
 css_class: "with-margin"
 ---
 
