--- a/site/2013/02/24/ruby-2-0-by-example.html.haml
+++ b/site/2013/02/24/ruby-2-0-by-example.html.haml
@@ -1,6 +1,6 @@
 ---
 layout: "/_post.haml"
-title: "Ruby 2.0, as seen at RubyConf AU"
+title: "ruby 2.0 by example"
 css_class: "with-margin"
 ---
 
