Not syntax-level changes.

--- a/site/2013/02/24/ruby-2-0-by-example.html.haml
+++ b/site/2013/02/24/ruby-2-0-by-example.html.haml
@@ -7,7 +7,7 @@ css_class: "with-margin"
 :md
   Since it's ruby's 20th birthday today, I thought I'd write about what we can expect in the imminent 2.0 release. Version 2.0 is a great release with a strong theme, and that's _convention_---2.0 formalises useful conventions that us rubyists have grown to use, and it judiciously adds language features to address bad conventions.
 
-  There are four big syntax-level changes in 2.0---keyword arguments, refinements, lazy enumerables, and prependable modules. Here's my take on all four, using lots of code samples from my [RubyConf AU](http://www.rubyconf.org.au) talk. I've also [written up some of the lesser-known changes](/2013/02/24/getting-to-know-ruby-2-0), which together with these make for a very promising release.
+  There are four big front-facing changes in 2.0---keyword arguments, refinements, lazy enumerables, and prependable modules. Here's my take on all four, using lots of code samples from my [RubyConf AU](http://www.rubyconf.org.au) talk. I've also [written up some of the lesser-known changes](/2013/02/24/getting-to-know-ruby-2-0), which together with these make for a very promising release.
 
 
   ## Keyword arguments
