--- a/site/2013/02/24/ruby-2-0-by-example.html.haml
+++ b/site/2013/02/24/ruby-2-0-by-example.html.haml
@@ -41,7 +41,7 @@ css_class: "with-margin"
   Beautiful!
 
 :md
-  A couple of things to notice here. Firstly, no default handling is required, because it's part of the definition. Secondly, both the defining and calling syntax use the 1.9 hash syntax, so keyword args already feel familiar.
+  A couple of things to notice here. Firstly, no default handling is required, because it's part of the definition. Secondly, both the definition and the calls are written using the 1.9 hash syntax, so keyword args already feel familiar.
 
   Here's a real-world example from within actionpack.
 
