Lazy enumerables, not enumerations.

--- a/site/2013/02/24/ruby-2-0-by-example.html.haml
+++ b/site/2013/02/24/ruby-2-0-by-example.html.haml
@@ -178,7 +178,7 @@ css_class: "with-margin"
 
 
 :md
-  ## Lazy enumerations
+  ## Lazy enumerables
 
   Declarative list programming is even nicer in 2.0 thanks to lazy lists. Expensive and even infinite lists are cheaply useable now, because their elements are only evaluated as they're requested.
 
