Move the header into the per-page layouts so it can be customised.

--- a/site/index.html.haml
+++ b/site/index.html.haml
@@ -3,6 +3,12 @@ layout: "/_default.haml"
 title: "ben hoskings"
 ---
 
+%header
+  %h1= link('index.html', 'ben hoskings')
+  %nav
+    %a{rel: 'me', href: 'http://twitter.com/ben_h'} twitter
+    %a{rel: 'me', href: 'http://github.com/benhoskings'} github
+
 - now = Time.now
 
 #home
