Add an intro to the header and relocate the twitter/github links into it.

--- a/site/index.html.haml
+++ b/site/index.html.haml
@@ -4,10 +4,13 @@ title: "ben hoskings"
 ---
 
 %header
-  %h1= link('index.html', 'ben hoskings')
   %nav
     %a{rel: 'me', href: 'http://twitter.com/ben_h'} twitter
     %a{rel: 'me', href: 'http://github.com/benhoskings'} github
+  %h2
+    Hello! I work on the web. I like making existing tech better and removing accidental complexity. Here are some things I wrote.
+  %h1
+    = link('index.html', 'ben hoskings')
 
 - now = Time.now
 
